--- a/R/fence/fence.Rmd
+++ b/R/fence/fence.Rmd
@@ -56,9 +56,7 @@ stns
 Looks like 3 stations for Esquimalt in the station list, however only one&mdash;`ESQUIMALT HARBOUR (52)`&mdash;is currently collecting hourly data. 
 
 ```{r stn52}
-stn52 <- stns %>%
-  filter(end == 2018 & interval == "hour")
-stn52
+stns %>% filter(end == 2018 & interval == "hour")
 ```
 
 A quick map with the `bcmaps` & `sf` R packages confirms the station (red point) is actually in Esquimalt:
@@ -89,7 +87,7 @@ bcmaps::municipalities() %>%
 So let's grab all the data for station #52 `ESQUIMALT HARBOUR` using `weathercan::weather_dl()` and have a look at the wind speeds:
 
 ```{r raw_data}
-data <- weather_dl(stn)
+data <- weather_dl(station_ids = 52)
 
 data %>%
   select(station_id, station_name, date, wind_spd) %>%
